fixed extra padding on bottom of subscribe

--- a/styles.css
+++ b/styles.css
@@ -95,7 +95,6 @@ h3,
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 90vh;
 }
 
 .item {
@@ -116,11 +115,13 @@ h3,
   justify-content: space-around;
   align-items: center;
   text-align: center;
+  max-height: 75vh;
 }
 
 .row2 {
   display: inline-block;
   text-align: center;
+  max-height: 25vh;
 }
 
 .tixImg,
@@ -236,7 +237,7 @@ button:hover,
   }
   #mc_embed_signup_scroll {
     width: 60%;
-    margin: 4.5rem auto 0 auto;
+    margin: 0 auto;
   }
 }
 @media screen and (max-width: 767px) {
@@ -256,6 +257,10 @@ button:hover,
   .row1 {
     flex-direction: column;
     justify-content: flex-start;
+    max-height: auto;
+  }
+  .row2 {
+    max-height: auto;
   }
   .item {
     width: 100%;
